--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -1,48 +1,23 @@
 <% if(alerts.error) { %>
-
-	<div class="row">
-		<div class="col s12">
-			<div class="card red lighten-3">
-				<div class="card-content white-text">
-					<span class="card-title">Error</span>
-					<% alerts.error.forEach((msg) => { %>
-						<p><%= msg %></p>
-					<% }); %>
-				</div>
-				<div class="card-action white-text">
-					<p class="closeable">Close</p>
-				</div>
-			</div>
+	<% alerts.error.forEach(function(message) { %>
+		<div class='alert lighten-2 center form-background z-depth-5' id="success-alert">
+			<p>Oops! <%=message%> </p>
 		</div>
-	</div>
-
-<% }; %>
-
+	<% }) %>
+<% } %>
 
 <% if(alerts.success) { %>
-	<div class="row">
-		<div class="col s12">
-			<div class="card green lighten-4">
-				<div class="card-content green-text">
-					<span class="card-title">Success</span>
-					<% alerts.success.forEach((msg) => { %>
-						<p><%= msg %></p>
-					<% }); %>
-				</div>
-				<div class="card-action white-text">
-					<p class="closeable">Close</p>
-				</div>
-			</div>
+	<% alerts.success.forEach(function(message) { %>
+		<div class='alert lighten-3 center form-background z-depth-5' id="success-alert">
+			<p>Success! <%=message%></p>
 		</div>
-	</div>
-<% }; %>
-
-
+	<% }) %>
+<% } %>
 
 <script>
-	[...document.getElementsByClassName('closeable')].forEach((elem) => {
-		elem.addEventListener('click', (() => {
-			document.getElementsByClassName('card')[0].style.display = 'none';
-		}));
-	});
+		[...document.getElementsByClassName('okay')].forEach(function(element){
+			element.addEventListener('click', function(){
+				document.getElementsByClassName('alert')[0].style.display = 'none';
+			});
+		});
 </script>
