--- a/views/parties/new.ejs
+++ b/views/parties/new.ejs
@@ -1,8 +1,10 @@
 <div>
   <h3>This is the Party page!</h3>
-  <form>
+  <form method="POST" action="/party">
     <h5>Name of event:</h5>
     <input type="text" name="partyname">
+    <h5>Secret passcode:</h5>
+    <input type="number" name="token">
     <input type="submit" value="Create a party">
   </form>
 
