--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,14 +5,16 @@
 	<link rel="stylesheet" type="text/css" href="/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link href="https://fonts.goognav-wrapperleapis.com/css?family=Baloo|Bungee+Shade|PT+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
 </head>
 <body>
   	<nav>
-	    <div class="nav-wrapper">
-	      <a href="/" class="brand-logo"><i class="material-icons">cloud</i>Home</a>
+	    <div class="">
+	      <a href="/" class="brand-logo">The Party Jukebox</a>
 	      <ul class="right">
 	      	<% if(!user) { %>
 	      		<li><a href="/auth/login">Log In</a></li>
