--- a/views/parties/jukebox.ejs
+++ b/views/parties/jukebox.ejs
@@ -4,18 +4,6 @@
     <h2>Currently Playing:</h2>
   </div>
   <div class="queue-box">
-    <ul>
-      For each song in the quueueueue.
-      <li></li>
-    </ul>
+    <h2>All the songs</h2>
   <div> 
-  <div>
-    <form method="POST" action="/jukebox/playlist">
-      <label for="artist">Artist</label>
-      <input type="text" id="artist" name="artist">
-      <label for="title">Title</label>
-      <input type="text" id="title" title="title">
-      <input type="submit" name="Search">
-    </form>
-  </div>
 </div>
