route to create jukebox information is finished

--- a/views/parties/new.ejs
+++ b/views/parties/new.ejs
@@ -15,7 +15,7 @@
 <div class="row">
   <div class="s12 m4 l8 join">
       <h3>Join a Party!</h3>
-      <form method="GET" action='/jukebox/'>
+      <form method="GET" action='/party/jukebox'>
         <h5>Enter Passcode:</h5>
         <input type="number" name="token">
         <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Enter my party<i class="material-icons right">mood</i></button>
