calling api and chat box set up

--- a/views/parties/search.ejs
+++ b/views/parties/search.ejs
@@ -10,6 +10,12 @@
     </ul>
   <div> 
   <div>
+    <form method="GET" action="/chat">
+    <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Join your party chat<i class="material-icons right">chat</i></button>
+    </form>
+  </div>
+
+  <div>
     <form method="POST" action="/search/guestinput">
       <label for="artist">Artist</label>
       <input type="text" id="artist" name="artist">
