--- a/views/parties/chat.ejs
+++ b/views/parties/chat.ejs
@@ -17,4 +17,17 @@
         $('#txt').val('');
         return false;
     });
+    //   // append the chat text message
+    //   socket.on('chat_message', function(msg){
+    //     $('#messages').append($('<li>').html(msg));
+    //   });
+    //   // append text if someone is online
+    //   socket.on('is_online', function(username) {
+    //       $('#messages').append($('<li>').html(username));
+    //   });
+    //   // ask username
+    //   var username = prompt('Please tell me your name');
+    //   socket.emit('username', username);
+    //   });
+    // });
 </script>
