home style added

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
+body{}
 nav {
-	background-color: #ddd !important;
+	background-color: black !important;
 	padding: .5em 0 0 .5em;
 }
 
@@ -7,6 +8,7 @@ nav a {
 	text-decoration: none;
 	font-weight: bold;
 	font-size: 28px;
+	color: white;
 }
 nav ul a{
 	font-family: 'Baloo', cursive;
@@ -24,7 +26,69 @@ nav .brand-logo {
 	font-family: 'PT Sans', sans-serif;
 }
 
-#chatForm {
+.homewrapper{
+	position: absolute;
+	left: 30%;
+	top: 70%;
+	width: 500px;
+	height: 100px;
+}
+
+/* for homepage */
+.homebackground{
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  display: block;
+  position: absolute;
+	width: 100%;
+	height: 500px;
+	font-family: 'Fjalla One', sans-serif;
+	background: linear-gradient(to bottom, #405166 0%, #656f6f 100%);
+}
+.wrapbox{
+	top: 20%;
+	left: 30%;
+	width: 30%;
+  display: block;
+  position: absolute;
+}
+.titlewrapper{
+	color: #fff;
+  text-transform: uppercase;
+  font-size: 42px;
+  margin: 0;
+  line-height: 47px;
+  letter-spacing: 2px;
+}
+
+.title {
+  transform: translateX(-50%) rotate(-10deg);
+  display: block;
+  float: left;
+  left: 50%;
+  position: relative;
+}
+.title span {
+  transform: skew(-10deg);
+  display: block;
+  float: left;
+  text-shadow: #533d4a 1px 1px, #533d4a 2px 2px, #533d4a 3px 3px, #533d4a 4px 4px, #533d4a 5px 5px, #533d4a 6px 6px;
+  min-width: 10px;
+  min-height: 10px;
+  position: relative;
+}
+.title:nth-child(1) {
+  color: #e55643;
+}
+.title:nth-child(2) {
+  color: #2b9f5e;
+}
+.title:nth-child(3) {
+  color: #f1c83c;
+}
+
+/* #chatForm {
 	background: #fff; 
 	padding: 3px; 
 	position: fixed; 
@@ -55,4 +119,4 @@ nav .brand-logo {
 
 #messages li:nth-child(odd) { 
 	background: #eee;
-}
+} */
