--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -14,7 +14,7 @@
 				<input type="password" id="password" name="password">
 			</div>
 		</div>
-		<button class="btn waves-effect waves-light" type="submit">Log In
+		<button class="btn waves-effect waves-light grey darken-4" type="submit">Log In
     		<i class="material-icons right">send</i>
     	</button>
 	</form>
