--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 		<div>
-			<button class="btn waves-effect waves-light" type="submit">Sign Me Up
+			<button class="btn waves-effect waves-light grey darken-4" type="submit">Sign Me Up
 	    		<i class="material-icons right">send</i>
 			</button>
 		</div>
