--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,18 +2,17 @@
   <div class="wrapbox">
     <h1 class="titlewrapper">
       <span class="title">Get your songs,</span>
-      <span class="title">let the DJ play them,</span>
+      <span class="title">let DJ drop the beat,</span>
       <span class="title">and enjoy the party</span>
     </h1>
   </div>
 </section>
 
-<div class="homewrapper">
+<div class="btnwrapper">
   <label>Welcome back!</label>
   <a href="/auth/login"><button class="btn waves-effect waves-light grey darken-4">Login</button></a>
-
   <label>Not a member yet?</label>
-  <a href="/auth/signup"><button class="btn waves-effect waves-light grey darken-4">SignUp</button></a>
+  <a href="/auth/signup"><button class="btn waves-effect waves-light grey darken-4">Sign Up</button></a>
 </div>
 
 <script>
