--- a/views/parties/jukebox.ejs
+++ b/views/parties/jukebox.ejs
@@ -13,3 +13,9 @@
     <% }) %>
   <div> 
 </div>
+      <ul>
+        <li><%= song.artist %>, <%= song.title %></li>
+      </ul>
+    <% }) %>
+  <div> 
+</div>
