--- a/public/style.css
+++ b/public/style.css
@@ -26,9 +26,9 @@ nav .brand-logo {
 	font-family: 'PT Sans', sans-serif;
 }
 
-.homewrapper{
+.btnwrapper{
 	position: absolute;
-	left: 30%;
+	left: 40%;
 	top: 70%;
 	width: 500px;
 	height: 100px;
@@ -48,7 +48,7 @@ nav .brand-logo {
 }
 .wrapbox{
 	top: 20%;
-	left: 30%;
+	left: 35%;
 	width: 30%;
   display: block;
   position: absolute;
@@ -56,9 +56,9 @@ nav .brand-logo {
 .titlewrapper{
 	color: #fff;
   text-transform: uppercase;
-  font-size: 42px;
+  font-size: 50px;
   margin: 0;
-  line-height: 47px;
+  line-height: 60px;
   letter-spacing: 2px;
 }
 
