--- a/views/parties/new.ejs
+++ b/views/parties/new.ejs
@@ -1,12 +1,12 @@
 
 <div class="row">
   <div class="s12 m4 l8 join">
-      <h3>This is the Party page!</h3>
+      <h4>Throw a new party</h4>
       <form method="POST" action="/party">
         <h5>Name of event:</h5>
         <input type="text" name="partyname">
         <h5>Secret passcode:</h5>
-        <input type="number" name="token" min="3" max="8">
+        <input type="number" name="token" min="0" max="1000000">
         <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Create a party<i class="material-icons right">group_add</i></button>
       </form>
   </div>
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="s12 m4 l8 join">
-      <h3>Join a Party!</h3>
+      <h4>Join a Party!</h4>
       <form method="GET" action='/party/jukebox'>
         <h5>Enter Passcode:</h5>
         <input type="number" name="token">
