--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,9 @@
 <section class="homebackground">
   <div class="wrapbox">
     <h1 class="titlewrapper">
-      <span class="title">Get your songs,</span>
-      <span class="title">let DJ drop the beat,</span>
-      <span class="title">and enjoy the party</span>
+      <span class="maintitle">Get your songs,</span>
+      <span class="maintitle">let DJ drop the beat,</span>
+      <span class="maintitle">and enjoy the party</span>
     </h1>
   </div>
 </section>
@@ -17,7 +17,7 @@
 
 <script>
 $(document).ready(function() {
-  $(".title").lettering();
+  $(".maintitle").lettering();
   $(".button").lettering();
 });
 $(document).ready(function() {
@@ -29,7 +29,7 @@ $('.button').click(function() {
 function animation() {
   var title1 = new TimelineMax();
   title1.to(".button", 0, {visibility: 'hidden', opacity: 0})
-  title1.staggerFromTo(".title span", 0.5, 
+  title1.staggerFromTo(".maintitle span", 0.5, 
   {ease: Back.easeOut.config(1.7), opacity: 0, bottom: -80},
   {ease: Back.easeOut.config(1.7), opacity: 1, bottom: 0}, 0.05);
   title1.to(".button", 0.2, {visibility: 'visible' ,opacity: 1})
