--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title>Auth Boilerplate</title>
 	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="/player.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Baloo|Bungee+Shade|Fjalla+One|PT+Sans" rel="stylesheet">
@@ -25,7 +26,7 @@
 	      		<% if(user.admin) { %>
 	      			<li><a href="/profile/admins">Admin Page</a></li>
 	      		<% } %>
-						<li>Hello, <%= user.firstname %>!</li>
+						<li>Hello, <%= user.username %>!</li>
 						<li><a href="/party">Party</a></li>
 	      		<li><a href="/profile">Profile</a></li>
 	      		<li><a href="/auth/logout">Logout</a></li>
@@ -40,15 +41,20 @@
 	<script src='/main.js'></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script>
-		// document.addEventListener('DOMContentLoaded', function() {
-    // 		var elems = document.querySelectorAll('.datepicker');
-    // 		var instances = M.Datepicker.init(elems, {
-    // 			autoClose: true,
-    // 			minDate: new Date('01/01/2019'),
-    // 			maxDate: new Date(),
-    // 			yearRange: [1920, 2019]
-    // 		});
-  	// 	});
+		$(function(){
+		  var $form_inputs_jukebox =   $('form input, #jukebox');
+		  var $rainbow_and_border = $('.rain, .border');
+		  /* Used to provide loping animations in fallback mode */
+		  $form_inputs_jukebox.bind('focus', function(){
+		  	$rainbow_and_border.addClass('end').removeClass('unfocus start');
+		  });
+		  $form_inputs_jukebox.bind('blur', function(){
+		  	$rainbow_and_border.addClass('unfocus start').removeClass('end');
+		  });
+		  $form_inputs_jukebox.first().delay(800).queue(function() {
+			$(this).focus();
+		  });
+		});
 	</script>
 </body>
 </html>
