--- a/views/parties/host.ejs
+++ b/views/parties/host.ejs
@@ -1,9 +1,12 @@
+
 <div>
   <h1><%= party.partyname %> - <%= party.token %></h1>
   <div>
     <h2>Currently Playing:</h2>
   </div>
   <h3>All the songs in the queue.</h3>
+  <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
   <div class="queue-box">
   <ul>
     <li>song1</li>
