--- a/views/parties/search.ejs
+++ b/views/parties/search.ejs
@@ -1,27 +1,21 @@
 <div>
   <h2>Party name</h2>
-  <div>
-    <h2>Currently Playing:</h2>
-  </div>
-  <div class="queue-box">
-    <ul>
-      For each song in the quueueueue.
-      <li></li>
-    </ul>
-  <div> 
-  <div>
+  <!-- <div>
     <form method="GET" action="/chat">
-    <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Join your party chat<i class="material-icons right">chat</i></button>
+      <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Join your party chat<i class="material-icons right">chat</i></button>
     </form>
-  </div>
+  </div> -->
 
-  <div>
-    <form method="POST" action="/search/guestinput">
-      <label for="artist">Artist</label>
-      <input type="text" id="artist" name="artist">
-      <label for="title">Title</label>
-      <input type="text" id="title" name="track">
-      <input type="submit" value="Search">
-    </form>
+
+  <div class="rain">
+    <div class="border start">
+      <form method="POST" action="/search/guestinput" class="rainbow">
+        <label for="artist">Artist</label>
+        <input type="text" id="artist" name="artist">
+        <label for="title">Title</label>
+        <input type="text" id="title" name="track">
+        <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Search<i class="material-icons right">send</i></button>
+      </form>
+    </div> 
   </div>
 </div>
