--- a/public/style.css
+++ b/public/style.css
@@ -221,7 +221,7 @@ nav .brand-logo {
 }
 
 /* Regular Form Styles */
-form,	#jukebox {
+form,	.jukebox {
 	background: #212121;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -231,7 +231,8 @@ form,	#jukebox {
 	background: -moz-radial-gradient(50% 46% 90deg,circle closest-corner, #242424, #090909);
 	background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 150, from(#242424), to(#090909));
 }
-form label{
+
+form label, .jukebox {
 	display: block;
 	padding: 10px 10px 5px 15px;
 	font-size: 11px;
@@ -251,28 +252,9 @@ form input {
 	color: #444;
 	font-size: 16px;
 }
-form input:focus{
+/* form input:focus {
 	outline: 1px solid #555;
 	color: #FFF;
-}
-/* input[type="submit"]{
-	color: #999;
-	padding: 5px 10px;
-	float: right;
-	margin: 20px 0;
-	border: 1px solid #000;
-	font-weight: lighter;
-	-moz-border-radius: 15px;
-	-webkit-border-radius: 15px;
-	border-radius: 15px;
-	background: #45484d;
-	background: -moz-linear-gradient(top, #222 0%, #111 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#222), color-stop(100%,#111));
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#22222', endColorstr='#11111',GradientType=0 );
-	-moz-box-shadow: 0px 1px 1px #000, 0px 1px 0px rgba(255,255,255,.3) inset;
-	-webkit-box-shadow: 0px 1px 1px #000, 0px 1px 0px rgba(255,255,255,.3) inset;
-	box-shadow: 0px 1px 1px #000,0px 1px 0px rgba(255,255,255,.3) inset;
-	text-shadow: 0 1px 1px #000;
 } */
 
 
@@ -285,4 +267,10 @@ form input:focus{
 .trackname {
 	font-weight: 600;
 	font-size: 100%;
+}
+
+.play-wrapper{
+	position: absolute;
+	left: 35%;
+	top: 20%;
 }
