--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,31 +1,32 @@
-<h2>Sign Up!</h2>
-
-<div class="row">
-	<form method="POST" action="/auth/signup" class="col s12">
-		<div class="row">
-			<div class="col s6 input-field">
-				<label for="username">Username</label>
-				<input type="text" id="username" name="username" placeholder="Enter your username" value="<%= previousData ? previousData.username : '' %>">
+<h4>Sign Up!</h4>
+<div class="rain">
+	<div class="border start">
+		<form method="POST" action="/auth/signup" class="col s12">
+			<div class="row">
+				<div class="col s6 input-field">
+					<label for="username">Username</label>
+					<input type="text" id="username" name="username" value="<%= previousData ? previousData.username : '' %>">
+				</div>
+				<div class="col s6 input-field">
+					<label for="email">Email</label>
+					<input type="email" name="email" value="<%= previousData ? previousData.email : '' %>">
+				</div>
 			</div>
-			<div class="col s6 input-field">
-				<label for="email">Email</label>
-				<input type="email" name="email" placeholder="Enter your email" value="<%= previousData ? previousData.email : '' %>">
+			<div class="row">
+				<div class="col s6 input-field">
+					<label for="password">Password</label>
+					<input type="password" id="password" name="password">
+				</div>
+				<div class="col s6 input-field">
+					<label for="passwordV">Retype Password</label>
+					<input type="password" id="passwordV" name="passwordV">
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col s6 input-field">
-				<label for="password">Password</label>
-				<input type="password" id="password" name="password" placeholder="Enter your password">
+			<div>
+				<button class="btn waves-effect waves-light grey darken-4" type="submit">Sign Me Up
+					<i class="material-icons right">send</i>
+				</button>
 			</div>
-			<div class="col s6 input-field">
-				<label for="passwordV">Retype Password</label>
-				<input type="password" id="passwordV" name="passwordV" placeholder="Retype your password">
-			</div>
-		</div>
-		<div>
-			<button class="btn waves-effect waves-light grey darken-4" type="submit">Sign Me Up
-	    		<i class="material-icons right">send</i>
-			</button>
-		</div>
-	</form>
+		</form>		
+	</div>	
 </div>
