--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,16 +42,16 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script>
 		$(function(){
-		  var $form_inputs_jukebox =   $('form input, #jukebox');
+		  var $form_inputs_and_jukebox =   $('form input', '.jukebox');
 		  var $rainbow_and_border = $('.rain, .border');
 		  /* Used to provide loping animations in fallback mode */
-		  $form_inputs_jukebox.bind('focus', function(){
+		  $form_inputs_and_jukebox.bind('focus', function(){
 		  	$rainbow_and_border.addClass('end').removeClass('unfocus start');
 		  });
-		  $form_inputs_jukebox.bind('blur', function(){
+		  $form_inputs_and_jukebox.bind('blur', function(){
 		  	$rainbow_and_border.addClass('unfocus start').removeClass('end');
 		  });
-		  $form_inputs_jukebox.first().delay(800).queue(function() {
+		  $form_inputs_and_jukebox.first().delay(800).queue(function() {
 			$(this).focus();
 		  });
 		});
