--- a/views/parties/new.ejs
+++ b/views/parties/new.ejs
@@ -1,10 +1,9 @@
-
 <div class="row">
   <div class="s12 m4 l8 join">
     <h4>Throw a new party</h4>
     <div class="rain">
       <div class="border start">
-        <form method="POST" action="/party">
+        <form method="POST" action="/party/host">
           <label for="partyname">Name of event:</label>
           <input type="text" name="partyname" id="partyname">
           <label for="token">Secret passcode:</label>
