--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,8 @@
-body{}
+body {
+	background-color: #212121;
+	color: white;
+}
+
 nav {
 	background-color: black !important;
 	padding: .5em 0 0 .5em;
@@ -131,7 +135,7 @@ nav .brand-logo {
 } */
 
 
-/* Search form */
+/* Search form and jukebox */
 
 /* .border,
 .rain {
@@ -269,8 +273,20 @@ form input {
 	font-size: 100%;
 }
 
-.play-wrapper{
-	position: absolute;
-	left: 35%;
-	top: 20%;
+.embed-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+	height: auto;
 }
+	.embed-container iframe,
+	.embed-container object,
+	.embed-container embed {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+	}
