--- a/views/parties/search.ejs
+++ b/views/parties/search.ejs
@@ -1,12 +1,5 @@
 <div>
-  <h2>Party name</h2>
-  <!-- <div>
-    <form method="GET" action="/chat">
-      <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Join your party chat<i class="material-icons right">chat</i></button>
-    </form>
-  </div> -->
-
-
+  <h4>Spotify Song Search</h4>
   <div class="rain">
     <div class="border start">
       <form method="POST" action="/search/guestinput" class="rainbow">
