--- a/views/parties/new.ejs
+++ b/views/parties/new.ejs
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="s12 m4 l8 join">
-    <h4>Throw a new party</h4>
+  <div class="col s12 join">
+    <h4 class="mobilefriendlytext">Throw a new party</h4>
     <div class="rain">
       <div class="border start">
         <form method="POST" action="/party">
@@ -16,8 +16,8 @@
 </div>
 
 <div class="row">
-  <div class="s12 m4 l8 join">
-    <h4>Join a Party!</h4>
+  <div class="col s12 join">
+    <h4 class="mobilefriendlytext">Join a Party!</h4>
     <div class="rain">
       <div class="border start">
         <form method="GET" action='/party/guest'>
