--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,3 +17,15 @@
 		<p><%= user.bio %></p>
 	</div>
 </div>
+
+<div class="row">	
+	<div class="col s12 m4 l8 partylist">
+		<h4>Parties You Have Joined</h4>
+		<% parties.forEach(function(party){%>
+			<ul>
+				<a href="/party/guest?token=<%=party.token%>&action="><li><%=party.partyname%></li></a>
+			</ul>
+		<%})%>
+		
+	</div>
+</div>
