testing spotify login

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
 
 <div class="btnwrapper">
   <label>Welcome back!</label>
-  <a href="/auth/login"><button class="btn waves-effect waves-light grey darken-4">Login</button></a>
+  <a href="/auth/spotify/callback"><button class="btn waves-effect waves-light grey darken-4">Login with Spotify</button></a>
   <label>Not a member yet?</label>
   <a href="/auth/signup"><button class="btn waves-effect waves-light grey darken-4">Sign Up</button></a>
 </div>
