attempt to merge

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,9 @@
 <section class="homebackground">
   <div class="wrapbox">
     <h1 class="titlewrapper">
-      <span class="maintitle">Get your songs,</span>
-      <span class="maintitle">let DJ drop the beat,</span>
-      <span class="maintitle">and enjoy the party</span>
+      <span class="maintitle mobilefriendlytext">Get your songs,</span>
+      <span class="maintitle mobilefriendlytext">let DJ drop the beat,</span>
+      <span class="maintitle mobilefriendlytext">and enjoy the party</span>
     </h1>
   </div>
 </section>
