--- a/public/style.css
+++ b/public/style.css
@@ -226,6 +226,8 @@ nav .brand-logo {
 
 /* Regular Form Styles */
 form,	.jukebox {
+	display: inline-block;
+	text-align: center;
 	background: #212121;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -243,7 +245,9 @@ form label, .jukebox {
 	color: #777;
 }
 form input {
+	color: white;
 	display: block;
+	text-align: center;
 	margin: 5px 10px 10px 15px;
 	width: 85%;
 	background: #111;
@@ -253,7 +257,6 @@ form input {
 	outline: 1px solid #333;
 	border: 1px solid #000;
 	padding: 5px;
-	color: #444;
 	font-size: 16px;
 }
 /* form input:focus {
