--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,6 +2,7 @@
 
 <div class="rain">
 	<div class="border start">
+		<!-- change this back to /auth/spotify/callback and GET method-->
 		<form method="POST" action="/auth/login" class="col s12">
 			<div class="row">
 				<div class="col s12 input-field">
