--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Auth Boilerplate</title>
+	<title>The Party Jukebox</title>
 	<link rel="stylesheet" type="text/css" href="/style.css">
 	<link rel="stylesheet" type="text/css" href="/player.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
@@ -16,7 +16,7 @@
 </head>
 <header class='header'> <% include partials/navbar %> </header>
 <body>
- 
+
 	<div class="container">
 		<% include partials/alerts %>
 		<%- body%>
