--- a/views/parties/search.ejs
+++ b/views/parties/search.ejs
@@ -7,6 +7,7 @@
         <input type="text" id="artist" name="artist">
         <label for="title">Title</label>
         <input type="text" id="title" name="track">
+        <input name="name" type="hidden" value="<%= partytoken.name %>">
         <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Search<i class="material-icons right">send</i></button>
       </form>
     </div> 
