--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<h4>Sign Up!</h4>
+<h4>Sign Up Here</h4>
 <div class="rain">
 	<div class="border start">
 		<form method="POST" action="/auth/signup" class="col s12">
