--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     <h1 class="titlewrapper">
       <span class="maintitle mobilefriendlytext">Get your songs,</span>
       <span class="maintitle mobilefriendlytext">let DJ drop the beat,</span>
-      <span class="maintitle mobilefriendlytext">and enjoy the party</span>
+      <span class="maintitle mobilefriendlytext">and enjoy the playlist</span>
     </h1>
   </div>
 </section>
