--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,7 @@
         <li><a href="/profile/admins">Admin Page</a></li>
       <% } %>
       <li>Hello, <%= user.username %>!</li>
-      <li><a href="/party">Party</a></li>
+      <li><a href="/playlist">Playlist</a></li>
       <li><a href="/profile">Profile</a></li>
       <li><a href="/auth/logout">Logout</a></li>
     <% } %>
@@ -30,7 +30,7 @@
         <li><a href="/profile/admins">Admin Page</a></li>
       <% } %>
       <li>Hello, <%= user.username %>!</li>
-      <li><a href="/party">Party</a></li>
+      <li><a href="/playlist">playlist</a></li>
       <li><a href="/profile">Profile</a></li>
       <li><a href="/auth/logout">Logout</a></li>
     <% } %>
