--- a/views/playlists/jukebox.ejs
+++ b/views/playlists/jukebox.ejs
@@ -1,5 +1,5 @@
 <div>
-  <h1><%= party.partyname %> - <%= party.token %></h1>
+  <h1><%= playlist.partyName %> - <%= playlist.token %></h1>
   <div>
     <h2>Currently Playing:</h2>
   </div>
