--- a/views/playlists/search-result.ejs
+++ b/views/playlists/search-result.ejs
@@ -1,4 +1,4 @@
-<h3><%= partyname.name %></h3>
+<h3><%= partyName.name %></h3>
 
 <% for(var i=1; i<results.items.length; i++) { %>
 <ul class="collection">
@@ -10,10 +10,11 @@
         Track:  <span class="trackname"><%= results.items[i].track_number %></span>
       </p>
       <form method="POST" action="/profile/add">
+      <input name="imageUrl" type="hidden" value="<%= results.items[i].album.images[0].url %>">
       <input name="artist" type="hidden" value="<%= results.items[i].artists[0].name %>">
       <input name="title" type="hidden" value="<%= results.items[i].name %>">
-      <input name="id" type="hidden" value="<%= results.items[i].id %>">
-      <input name="partyname" type="hidden" value="<%= partyname.name %>">
+      <input name="spotifyId" type="hidden" value="<%= results.items[i].id %>">
+      <input name="partyName" type="hidden" value="<%= partyName.name %>">
       <button class="secondary-content cardcolor" type="submit" ><i class="material-icons">library_add</i></button>
   </form>
     </li>
