--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,11 +19,11 @@
 </div>
 
 <div class="row">	
-	<div class="col s12 m4 l8 partylist">
-		<h4>Parties You Have Joined</h4>
-		<% parties.forEach(function(party){%>
+	<div class="col s12 m4 l8 playlistlist">
+		<h4>playlists You Have Joined</h4>
+		<% playlists.forEach(function(playlist){%>
 			<ul>
-				<a href="/party/guest?token=<%=party.token%>&action="><li><%=party.partyname%></li></a>
+				<a href="/playlist/guest?token=<%=playlist.token%>&action="><li><%=playlist.partyName%></li></a>
 			</ul>
 		<%})%>
 		
