--- a/views/playlists/guest.ejs
+++ b/views/playlists/guest.ejs
@@ -2,11 +2,9 @@
   <div class="border start">
     <div class="jukebox">
       <h1 class="join"><%= playlist.partyName %> - <%= playlist.token %></h1>
-        <div class="col s12 m4 l8">
-        <div class='embed-container'>
-          <iframe src="https://open.spotify.com/embed/playlist/59ZbFPES4DQwEjBpWHzrtC" width="1000" height="600" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-      </div>
+      <%songs.forEach(function(song)){%>
+        <%=song.title%>
+      <%});%>
     </div>
   </div> 
 </div>
