--- a/views/playlists/new.ejs
+++ b/views/playlists/new.ejs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s12 join">
-    <h4 class="mobilefriendlytext">Throw a new playlist</h4>
+    <h4 class="mobilefriendlytext">Throw a New Party</h4>
     <div class="rain">
       <div class="border start">
         <form method="POST" action="/playlist">
@@ -8,7 +8,7 @@
           <input type="text" name="partyName" id="partyName">
           <label for="token">Secret passcode:</label>
           <input type="number" name="token" min="0" max="1000000" id="token">
-          <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Create a playlist<i class="material-icons right">group_add</i></button>
+          <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Create a Playlist<i class="material-icons right">group_add</i></button>
         </form>
       </div>
     </div>
@@ -17,13 +17,13 @@
 
 <div class="row">
   <div class="col s12 join">
-    <h4 class="mobilefriendlytext">Join a playlist!</h4>
+    <h4 class="mobilefriendlytext">Join a party playlist!</h4>
     <div class="rain">
       <div class="border start">
         <form method="GET" action='/playlist/guest'>
           <label for="token">Enter Passcode:</label>
           <input type="number" name="token" id="token">
-          <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Enter my playlist<i class="material-icons right">mood</i></button>
+          <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Enter my Playlist<i class="material-icons right">mood</i></button>
         </form>
       </div>
     </div>    
