--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,8 @@
 		<% include partials/alerts %>
 		<%- body%>
 	</div>
+
+
 	<script src='/main.js'></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script>
@@ -39,5 +41,14 @@
 		  });
 		});
 	</script>
+	<footer class="page-footer">
+	<div class="container">
+			<div class="col l6 s12">
+				<h6 class="white-text">
+					Built by D.K.N <i class="material-icons">favorite</i>
+				</h6>
+			</div>
+	</div>
+	</footer>
 </body>
 </html>
